Integrate content store (#346)
The integrated index format now includes the content store:

- uses an adapter around Lucene's StoredFieldWriter/Reader so the content store is now a stored field. But in addition to retrieving the full value, you can also retrieve a substring from the value through the ContentStoreSegmentReader API.
- by default, we don't retrieve the content store values when you call index.luceneDoc(docId), because this wasn't how it worked before and retrieving full documents is costly. You can use a boolean to override this, or use the content store API of course. BTW if you call index.reader().document(docId), you WILL get values from the content store(s), so be careful.
- block size (number of characters from the document to encode per block) is stored in each segment. There's now a ContentStoreBlockCodec interface, representing how the blocks are encoded (i.e. compressed or not). These could be made configurable so we can experiment with the pros and cons of different block sizes and compressions. The default codec uses zlib and pools encoders and decoders.
- TextContent is a simple wrapper around either String or byte[] to reduce duplication in the indexing methods that handle document contents.
- ContentStore is now an interface with implementations ContentStoreIntegrated and ContentStoreExternal (all the old classes are children of this one).