@@ -1,9 +1,7 @@
 package nl.inl.blacklab.codec;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -14,7 +12,6 @@ import org.apache.logging.log4j.Logger;
 import org.apache.lucene.codecs.CodecUtil;
 import org.apache.lucene.codecs.FieldsProducer;
 import org.apache.lucene.codecs.PostingsFormat;
-import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.IndexFileNames;
 import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.SegmentReadState;
@@ -45,14 +42,18 @@ public class BlackLab40PostingsReader extends FieldsProducer {
 
     protected static final Logger logger = LogManager.getLogger(BlackLab40PostingsReader.class);
 
+    private static String fieldNameForCodecAccess;
+
+    private final SegmentReadState state;
+
     /**
-     * Get the BLFieldsProducer for the given leafreader.
+     * Get the BlackLab40PostingsReader for the given leafreader.
      *
      * The luceneField must be any existing Lucene field in the index.
      * It doesn't matter which. This is because BLTerms is used as an
-     * intermediate to get access to BLFieldsProducer.
+     * intermediate to get access to BlackLab40StoredFieldsReader.
      *
-     * The returned BLFieldsProducer is not specific for the specified field,
+     * The returned BlackLab40PostingsReader is not specific for the specified field,
      * but can be used to read information related to any field from the segment.
      *
      * @param lrc leafreader to get the BLFieldsProducer for
@@ -60,21 +61,16 @@ public class BlackLab40PostingsReader extends FieldsProducer {
      */
     public static BlackLab40PostingsReader get(LeafReaderContext lrc) {
         try {
-            // We need to find a field that is indexed and therefore has terms.
-            // TODO: determine an appropriate field once and reuse that so we don't always have to loop here.
-            for (FieldInfo fieldInfo: lrc.reader().getFieldInfos()) {
-                BLTerms terms = (BLTerms)(lrc.reader().terms(fieldInfo.name));
-                if (terms != null)
-                    return terms.getFieldsProducer();
-            }
-            return null;
+            if (fieldNameForCodecAccess == null)
+                fieldNameForCodecAccess = BlackLab40Codec.findFieldNameForCodecAccess(lrc);
+            return ((BLTerms)lrc.reader().terms(fieldNameForCodecAccess)).getFieldsProducer();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
     /** Name of PF we delegate to (the one from Lucene) */
-    private String delegatePostingsFormatName;
+    private String delegateFormatName;
 
     /** The delegate whose functionality we're extending */
     private final FieldsProducer delegateFieldsProducer;
@@ -87,11 +83,13 @@ public class BlackLab40PostingsReader extends FieldsProducer {
 
     public BlackLab40PostingsReader(SegmentReadState state) throws IOException {
 
+        this.state = state;
+
         // NOTE: opening the forward index calls openInputFile, which reads
         //       delegatePostingsFormatName, so this must be done first.
         forwardIndex = new SegmentForwardIndex(this, state);
 
-        PostingsFormat delegatePostingsFormat = PostingsFormat.forName(delegatePostingsFormatName);
+        PostingsFormat delegatePostingsFormat = PostingsFormat.forName(delegateFormatName);
         delegateFieldsProducer = delegatePostingsFormat.fieldsProducer(state);
     }
 
@@ -113,11 +111,18 @@ public class BlackLab40PostingsReader extends FieldsProducer {
             terms = termsPerField.get(field);
             if (terms == null) {
                 Terms delegateTerms = delegateFieldsProducer.terms(field);
+
                 terms = delegateTerms == null ? null : new BLTerms(delegateTerms, this);
                 termsPerField.put(field, terms);
             }
         }
         return terms;
+    }
+
+    BlackLab40StoredFieldsReader getStoredFieldReader() throws IOException {
+        BlackLab40Codec codec = (BlackLab40Codec) state.segmentInfo.getCodec();
+        return codec.storedFieldsFormat().fieldsReader(
+                state.segmentInfo.dir, state.segmentInfo, state.fieldInfos, state.context);
     }
 
     @Override
@@ -135,14 +140,14 @@ public class BlackLab40PostingsReader extends FieldsProducer {
 
     @Override
     public Collection<Accountable> getChildResources() {
-        List<Accountable> resources = new ArrayList<>(delegateFieldsProducer.getChildResources());
-        resources.add(Accountables.namedAccountable("delegate", delegateFieldsProducer));
-        return Collections.unmodifiableList(resources);
+        return List.of(Accountables.namedAccountable("delegate", delegateFieldsProducer));
     }
 
     @Override
     public void checkIntegrity() throws IOException {
         delegateFieldsProducer.checkIntegrity();
+
+        // TODO: check integrity of our own (FI) files?
     }
 
     @Override
@@ -154,25 +159,26 @@ public class BlackLab40PostingsReader extends FieldsProducer {
      * Open a custom file for reading and check the header.
      *
      * @param state segment read state
-     * @param extension extension of the file to open (will automatically be prefixed with "bl")
+     * @param extension extension of the file to open (will automatically be prefixed with "blfi.")
      * @return handle to the opened segment file
      */
     IndexInput openIndexFile(SegmentReadState state, String extension) throws IOException {
-        String fileName = IndexFileNames.segmentFileName(state.segmentInfo.name, state.segmentSuffix, "bl" + extension);
+        String fileName = IndexFileNames.segmentFileName(state.segmentInfo.name, state.segmentSuffix,
+                BlackLab40PostingsFormat.EXT_PREFIX + extension);
         IndexInput input = state.directory.openInput(fileName, state.context);
         try {
             // Check index header
             CodecUtil.checkIndexHeader(input, BlackLab40PostingsFormat.NAME, BlackLab40PostingsFormat.VERSION_START,
                     BlackLab40PostingsFormat.VERSION_CURRENT, state.segmentInfo.getId(), state.segmentSuffix);
 
-            // Check delegate postings format name
-            String delegatePFN = input.readString();
-            if (delegatePostingsFormatName == null)
-                delegatePostingsFormatName = delegatePFN;
-            if (!delegatePostingsFormatName.equals(delegatePFN))
+            // Check delegate format name
+            String delegateFN = input.readString();
+            if (delegateFormatName == null)
+                delegateFormatName = delegateFN;
+            if (!delegateFormatName.equals(delegateFN))
                 throw new IOException("Segment file " + fileName +
-                        " contains wrong delegate postings format name: " + delegatePFN +
-                        " (expected " + delegatePostingsFormatName + ")");
+                        " contains wrong delegate format name: " + delegateFN +
+                        " (expected " + delegateFormatName + ")");
 
             return input;
         } catch (Exception e) {
